# umjint

./: .gitignore  CMakeLists.txt  README.md
lab1/: CMakeLists.txt  out.txt
lab1/res/: konfiguracija1.txt
lab1/src/: ST_a_star.cpp  ST_a_star.h  a_star.cpp  a_star.h  main.cpp  node.cpp  node.h  star_trek_defs.h
lab2/: CMakeLists.txt
lab2/data/: m1.txt  m2.txt  m2_old.txt  m3.txt
lab2/src/: atom.cpp  atom.h  board.cpp  board.h  clause.cpp  clause.h  field_data.cpp  field_data.h  game.cpp  game.h  knowledge_base.cpp  knowledge_base.h  lazy_defines.h  literal.cpp  literal.h  main.cpp  main.h  point.cpp  point.h  point_atom.cpp  point_atom.h  pricier_point_comparator.h  redundant_comparator.h  refutation_resolution.cpp  refutation_resolution.h
lab3/data/: esdescription.txt  instrumenti.txt  zivotinje.txt
lab3/src/: esshell.py
lab4/: Neuron.py
vjezbanje/: CMakeLists.txt  ST_uniform_cost_search.cpp  ST_uniform_cost_search.h  generalSearchAlgorithm.hpp  general_search_algorithm.cpp  general_search_algorithm.h  main.cpp  map_loader.cpp  map_loader.h  node.cpp  node.h  star_trek.h  star_trek_defs.h  state.h  uniform_cost_search.cpp  uniform_cost_search.h
